--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@ body {
 
 
 
-  background: linear-gradient(160deg, #000000, #1A2C36, #5C6B73);
+  background: linear-gradient(160deg, #1A2D42 , #1A2D42, #5C6B73);
 
 
   background-color: #0c0c0c;
