--- a/app/globals.css
+++ b/app/globals.css
@@ -31,7 +31,7 @@ body {
   /* background: linear-gradient(160deg, #1A2D42 , #1A2D42, #5C6B73); */
 
 
-  background-color: #101820;
+  background-color: #0f0f0f;
   font-family: 'iranlight', sans-serif;
   direction: rtl;
 }
